version/0.13/_sources/api/solver/_autosummary/settings/degrees_of_freedom.rst.txt
:orphan:

.. _degrees_of_freedom:

degrees_of_freedom
==================

.. autoclass:: ansys.fluent.core.solver.settings_231.degrees_of_freedom.degrees_of_freedom

.. rubric:: Attributes

========================   ====================================================

Attribute                                                               Summary

========================   ====================================================
:ref:`option <option_9>`       Select method for calculating material property.

:ref:`value <value>`                                             'value' child.

========================   ====================================================

.. rubric:: Included in:

================================   =================================

Parent                                                       Summary

================================   =================================
:ref:`fluid_child <fluid_child>`       'child_object_type' of fluid.

================================   =================================

